# boxofhope

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  docker-compose.yml  test.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: api_ci.yml  docs.yml  docs_deploy.yml  gh-pages  gh-pages.yml  servers_ci.yml
api/: BoxOfHopeAPI.postman_collection.json  BoxOfHopeAPI_Test.postman_collection.json  Dockerfile  InitialTestEnvironment.postman_environment.json  README.md  package-lock.json  package.json  server.js
api/controllers/: apiController.js  maskController.js  notificationsController.js  settingsController.js  stateController.js  userHomeController.js
api/models/: apiModel.js  maskModel.js  notificationModel.js  settingsModel.js  stateModel.js  userHomeModel.js
api/newman/: FinalisedTests-2021-04-18-19-10-22-286-0.html
api/routes/: api-docs.js  apiRoutes.js
api/runners/: notificationRunnable.js  settingsRunnable.js  userHomeRunnable.js
boxofhope-gh-pages/: .gitignore  package-lock.json  package.json
boxofhope-gh-pages/public/: index.html
boxofhope-gh-pages/src/: globalStyles.js
boxofhope-gh-pages/src/common/Button/: index.js  styles.js
boxofhope-gh-pages/src/common/Container/: styles.js
boxofhope-gh-pages/src/common/Input/: styles.js
boxofhope-gh-pages/src/common/ScrollToTop/: index.js
boxofhope-gh-pages/src/common/SvgIcon/: index.js
boxofhope-gh-pages/src/common/TextArea/: index.js  styles.js
boxofhope-gh-pages/src/components/Block/: index.js  styles.js
boxofhope-gh-pages/src/components/ContentBlock/: index.js
boxofhope-gh-pages/src/components/Footer/: index.js
boxofhope-gh-pages/src/components/Header/: index.js
boxofhope-gh-pages/src/components/MiddleBlock/: index.js  styles.js
boxofhope-gh-pages/src/content/: IntroContent.json  MiddleBlockContent.json  MissionContent.json
boxofhope-gh-pages/src/locales/en/: translation.json
boxofhope-gh-pages/src/locales/es/: translation.json
boxofhope-gh-pages/src/pages/Home/: index.js
boxofhope-gh-pages/src/router/: config.js
cmask-gh-pages/: .gitignore  package-lock.json  package.json
cmask-gh-pages/.github/workflows/: gh-pages.yml
cmask-gh-pages/public/: CNAME  index.html  manifest.json
cmask-gh-pages/src/: App.css  App.js  CNAME  index.css  index.js
cmask-gh-pages/src/common/Container/: index.js
cmask-gh-pages/src/content/: AboutContent.json  ContactContent.json  IntroContent.json  MiddleBlockContent.json  MissionContent.json  ProductContent.json  TechContent.json
cmask-gh-pages/src/router/: index.js
docs/: ARCHITECTURE_8md.html  README_8md.html  annotated.html  annotated_dup.js  api_8cpp.html  api_8cpp__incl.map  api_8cpp__incl.md5  api_8h.html  api_8h.js  api_8h__dep__incl.map  api_8h__dep__incl.md5  api_8h__incl.map  api_8h__incl.md5  api_8h_source.html  app_8cpp.html  app_8cpp.js  app_8cpp__incl.map  app_8cpp__incl.md5  app_8cpp_a0040b31a2648820e75882b52c2790efa_cgraph.map  app_8cpp_a0040b31a2648820e75882b52c2790efa_cgraph.md5  app_8cpp_a0040b31a2648820e75882b52c2790efa_icgraph.map  app_8cpp_a0040b31a2648820e75882b52c2790efa_icgraph.md5  app_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  app_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  app_8cpp_a78bf8646c074be1959943f73bd7458c0_icgraph.map  app_8cpp_a78bf8646c074be1959943f73bd7458c0_icgraph.md5  classAPI.html  classAPI.js  classAPI_1_1DoorState.html  classAPI_1_1DoorState.js  classAPI_1_1DoorState__inherit__graph.map  classAPI_1_1DoorState__inherit__graph.md5  classAPI_1_1DoorState_a61978a95b3eaf314048d09cfa3584e58_cgraph.map  classAPI_1_1DoorState_a61978a95b3eaf314048d09cfa3584e58_cgraph.md5  classAPI_1_1DoorState_a61978a95b3eaf314048d09cfa3584e58_icgraph.map  classAPI_1_1DoorState_a61978a95b3eaf314048d09cfa3584e58_icgraph.md5  classAPI_1_1DoorState_a66e3b51269a55069e759fd68ec516f85_cgraph.map  classAPI_1_1DoorState_a66e3b51269a55069e759fd68ec516f85_cgraph.md5  classAPI_1_1DoorState_a8fc80611bd2a96ace51bd406ef8e67e3_cgraph.map  classAPI_1_1DoorState_a8fc80611bd2a96ace51bd406ef8e67e3_cgraph.md5  (+335 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  (+26 more)
images/: boxofhope_systemdiagram.xml
io_server/: .bumpversion.cfg  .clang-format  .codecov.yml  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md
io_server/apps/: app.cpp
io_server/config/: mainConfig.h.in
io_server/include/io_server/: io_config.h  io_door.h  io_generic_runnable.h  io_home.h  io_lcd.h  io_nfc.h  io_server.h  io_uvc.h
io_server/include/utils/: api.h
io_server/src/: CMakeLists.txt  io_config.cpp  io_door.cpp  io_home.cpp  io_lcd.cpp  io_nfc.cpp  io_server.cpp  io_uvc.cpp
io_server/src/utils/: api.cpp
io_server/test/: CMakeLists.txt  io_config.cpp  io_generic_runnable.cpp  io_home.cpp  io_server.cpp  io_server_utest.cpp  util_api.cpp
servers/: .gitignore  CMakeLists.txt  boxofhope.cpp  boxofhopeConfig.h  boxofhopeConfig.h.in
servers/io_server/: CMakeLists.txt  io_nfc.cpp  io_nfc.h  io_server.cpp  io_server.h
servers/restful_server/: CMakeLists.txt  restful_server.cpp  restful_server.h
servers/sql_server/: CMakeLists.txt  sql_server.cpp  sql_server.h
servers/sqllib/: CMakeLists.txt  sqllib.cpp  sqllib.h  test
servers/wiringPi-mock/: CMakeLists.txt  version.h  wiringPi-mock.cpp  wiringPi.h
src/: CMakeLists.txt  boxofhope.cpp  boxofhopeConfig.h.in
webapp/: .env.development  Dockerfile  README.md  package-lock.json  package.json
webapp/public/: index.html  manifest.json  sw.js
webapp/src/: App.css  App.js  index.css
webapp/src/pushNotifications/: PushNotificationCard.js  usePushNotifications.js
webapp/src/util/: api.js  storage.js
(+25 files in other folders)
